# IniFile

./: CMakeLists.txt  IniFileManager.cpp  IniFileManager.h  Print.cpp  Print.h  README.md  main.cpp
test/: CMakeLists.txt  runAllTest.cpp  test.cpp
